--- a/app/css/navBar.module.css
+++ b/app/css/navBar.module.css
@@ -21,8 +21,7 @@
     flex-direction: row;
     color: var(--white);
     align-items: center;
-    justify-content: space-between;
-    margin-right: 20px;
+    justify-content: space-around;
     width:55%;
 }
 
